--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li><a href="#">Organization</a></li>
         <li><a href="#">Industry</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">Career</a></li>
+        <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
       </ul>
     </div>
     <div class="hamburger-menu">
