--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>당신과 함께하는 HIMTOS</title>
+    <title>당신과 함께하는 Himtos</title>
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -47,7 +47,7 @@
     <a href="http://www.himtos.com">
       <div class="logo">
         <img src="Himtos_대문자.png" alt="logo" width="10%" height="10%">
-        <a href="#">HIMTOS</a>
+        <a href="http://www.himtos.com">HIMTOS</a>
       </div>
     <div class="menu">
       <div class="container">
@@ -127,7 +127,7 @@
 
   </div>
 </div>
-<div class="container">
+<div class="container_2">
   <div class = "row"></div>
   <div class="col-md-5"></div>
   <h3>사업문의</h5>
