--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>당신과 함께하는 Himtos</title>
+    <title>Himtos</title>
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -49,18 +49,21 @@
         <img src="Himtos_대문자.png" alt="logo" width="10%" height="10%">
         <a href="http://www.himtos.com">HIMTOS</a>
       </div>
-    <div class="menu">
-      <div class="container">
-      <ul>
-        <li><a href="company.html">Company</a></li>
-        <li><a href="#">Organization</a></li>
-        <li><a href="#">Industry</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
-      </ul>
+
     </div>
     <div class="hamburger-menu">
-      <i class="fa fa-bars"></i>
+      <i class="fa fa-bars">
+        <div class="menu">
+          <div class="container">
+          <ul>
+            <li><a href="#">Company</a></li>
+            <li><a href="#">Organization</a></li>
+            <li><a href="#">Industry</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="https://www.notion.so/Who-We-Are-833786ddc2c14e39aa960e82bafbec19?pvs=4">Career</a></li>
+          </ul>
+        </div>
+      </i>
     </div>
   </nav>
   <div class="hero-content">
@@ -127,13 +130,13 @@
 
   </div>
 </div>
-<div class="container_2">
+<div class="container">
   <div class = "row"></div>
-  <div class="col-md-5"></div>
+  <div class="col-md-5">
   <h3>사업문의</h5>
   <h3>☎ 010-5807-4702</h3>
   <h2>E-mail) kkjjll18@naver.com</h2>
-  <a href="#" class="btn btn-primary">문의하기</a>
+  <a href="#" class="btn btn-primary">문의하기</a></div>
 
 
 </div>
