--- a/company.html
+++ b/company.html
@@ -61,18 +61,19 @@
             <img src="Himtos_대문자.png" alt="logo" width="10%" height="10%">
             <a href="#">HIMTOS</a>
           </div>
-        <div class="menu">
-          <div class="container">
-          <ul>
-            <li><a href="#">Company</a></li>
-            <li><a href="#">Organization</a></li>
-            <li><a href="#">Industry</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
-          </ul>
-        </div>
         <div class="hamburger-menu">
-          <i class="fa fa-bars"></i>
+          <i class="fa fa-bars">
+            <div class="menu">
+              <div class="container">
+              <ul>
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Organization</a></li>
+                <li><a href="#">Industry</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
+              </ul>
+            </div>
+          </i>
         </div>
       </nav>
       </ul>
