--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="menu">
           <div class="container">
           <ul>
-            <li><a href="#">Company</a></li>
+            <li><a href="company.html">Company</a></li>
             <li><a href="#">Organization</a></li>
             <li><a href="#">Industry</a></li>
             <li><a href="#">Contact</a></li>
