--- a/company.html
+++ b/company.html
@@ -26,7 +26,7 @@
         <li><a href="company.html">Company</a></li>
         <li><a href="">Organization</a></li>
         <li><a href="">Industry</a></li>
-        <li><a href="http://pf.kakao.com/_uFxnQxj">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
   
       </ul>
