--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           <div class="card-body">
             <h5 class="card-title">HIMTOS 카카오 채널</h5>
             <p class="card-text">고객님의 발전과 함께 가겠습니다.</p>
-            <a href="#" class="btn btn-primary">자세히 알아보기</a>
+            <a href="http://pf.kakao.com/_uFxnQxj" class="btn btn-primary">자세히 알아보기</a>
           </div>
         </div>
       </div>
