--- a/company.html
+++ b/company.html
@@ -65,9 +65,14 @@
             
             <h3>사업영역</h3>
             <img src="인테리어 이미지.jpg" alt="인테리어_이미지" class="img-fluid" width="30%" height="30%">
-            <h4>빅데이터 활용 인테리어</h4>
+            <h4>1. 빅데이터 활용 인테리어</h4>
             <p>고객에 맞춘 인테리어 소재 개발 및 배치, 편리성과 공간활용도 분석</p>
-            
+            <img src="마케팅_이미지.jpg" alt="마케팅 이미지" class="img-fluid" width="30%" height="30%">
+            <h4>2. 인플루언서 고용플랫폼 Nuga Winner</h4>
+            <p>고객에 맞춘 BTL전용 인플루언서 고용플랫폼/트렌드분석 및 전략컨설팅</p>
+            <img src="물류_image.png" alt="물류 이미지" class="img-fluid" width="30%" height="30%">
+            <h4>3. 가장 빠른 Route</h4>
+            <p>네비게이션 개발 및 탁송시간까지 알 수 있어 정확한 배송</p> 
 </body>
 </html>
 
