--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <script src="https://kit.fontawesome.com/3f3c939ad7.js" crossorigin="anonymous"></script>
     <link href="Himtos_practice_menu.css" rel="stylesheet">
     <script src="Himtos_practice.js" defer></script>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
   <title>HIMTOS</title>
   <nav class="navbar">
     <div class="navbar_logo">
