--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://kit.fontawesome.com/3f3c939ad7.js" crossorigin="anonymous"></script>
     <link href="Himtos_practice_menu.css" rel="stylesheet">
     <script src="Himtos_practice.js" defer></script>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico/android-icon-36x36.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico/favicon.ico" type="image/x-icon">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
