--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </div>
     <ul class="navbar_menu">
       <li><a href="company.html">Company</a></li>
-      <li><a href="">Organization</a></li>
+      <li><a href="organization.html">Organization</a></li>
       <li><a href="">Industry</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
