--- a/organization.html
+++ b/organization.html
@@ -96,7 +96,7 @@
             <div class="card">
               <div class="card-body">
                 <img src="Yong_Jun_LEE.png" class="card-img-top" alt="마케팅 이미지">
-                <h5 class="card-title">이용준</h5>
+                <h5 class="card-title">이용준(Financial Part)</h5>
                 <p class="card-text">前)세무법인 실무 <br>現)HIMTOS 세무실무자</p>
               </div>
             </div>
@@ -106,7 +106,7 @@
           <div class="card-body">
             <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
             <h5 class="card-title">박승현</h5>
-            <p class="card-text">前)Egg&Seed 영업총괄<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
+            <p class="card-text">前)Egg&Seed 영업총괄<br>DoAllPack 물류 및 배송관리 現)HIMTOS Sales Pt. Manager</p>
           </div>
         </div>
   </div>
