--- a/organization.html
+++ b/organization.html
@@ -57,10 +57,19 @@
     </div>
 </head>
 <body>
-    <div class="P_organization"></div>
-    <img src="조직도_0.1v.jpg" alt="조직도" height="100%" width="100%">
-    <h1 class="display-4 mb-4">우리는 <strong>대화</strong>정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
-    <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
+  <div class="bg-white pb-">
+    <div class="hero-section bg-white text-white py-5" width="50%" height="50%">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
+                </div>
+                <div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
+                <h1 class="display-4 mb-4">우리는 <strong>대화</strong>정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
+                <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
+            </div>
+        </div>
+    </div>
 </div>
     <div class ="background">
         <div class="container">
@@ -106,7 +115,7 @@
           <div class="card-body">
             <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
             <h5 class="card-title">박승현</h5>
-            <p class="card-text">前)Egg&Seed B2C&B2B 영업<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
+            <p class="card-text">前)Egg&Seed B2B&B2C 영업<br>DoAllPack 물류 및 배송관리 現)HIMTOS Sales Pt. Manager</p>
           </div>
         </div>
   </div>
