--- a/organization.html
+++ b/organization.html
@@ -115,7 +115,7 @@
           <div class="card-body">
             <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
             <h5 class="card-title">박승현</h5>
-            <p class="card-text">前)Egg&Seed B2B&B2C 영업<br>DoAllPack 물류 및 배송관리 現)HIMTOS Sales Pt. Manager</p>
+            <p class="card-text">前)Egg&Seed B2B&B2C 영업<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
           </div>
         </div>
   </div>
