--- a/company.html
+++ b/company.html
@@ -29,7 +29,7 @@
       </div>
       <ul class="navbar_menu">
         <li><a href="company.html">Company</a></li>
-        <li><a href="organization.html">Organization</a></li>
+        <li><a href="">Organization</a></li>
         <li><a href="">Industry</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
@@ -73,9 +73,10 @@
             <h4>1. 빅데이터 활용 인테리어</h4>
             <p>고객에 맞춘 인테리어 소재 개발 및 배치, 편리성과 공간활용도 분석</p>
             <img src="마케팅_이미지.jpg" alt="마케팅 이미지" class="img-fluid" width="30%" height="30%">
-            <h4>2. 인플루언서 고용플랫폼 Nuga Winner</h4>
-            <p>고객에 맞춘 BTL전용 인플루언서 고용플랫폼/트렌드분석 및 전략컨설팅</p>
-            <img src="물류_image.png" alt="물류 이미지" class="img-fluid" width="30%" height="30%">
+            <h4>2. 인플루언서 고용플랫폼 Nuga Winner & Live Stage 공연 Platform HIMMEL</h4>
+            <h2>Nuga Winner 고객에 맞춘 BTL전용 인플루언서 고용플랫폼/트렌드분석 및 전략컨설팅</h2>
+            <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4></span>
+            <img src="물류_image.png" alt="물류 이미지" class="img-fluid" width="30%" height="30%">0
             <h4>3. 가장 빠른 Route</h4>
             <p>네비게이션 개발 및 탁송시간까지 알 수 있어 정확한 배송</p> 
 </body>
