--- a/organization.html
+++ b/organization.html
@@ -58,14 +58,14 @@
 </head>
 <body>
   <div class="bg-white pb-">
-    <div class="hero-section bg-white text-white py-5" width="50%" height="50%">
+    <div class="hero-section bg-white text-black py-5" width="50%" height="50%">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
                 </div>
-                <div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
-                <h1 class="display-4 mb-4">우리는 <strong>대화</strong>정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
+                <span><h1>1. 우리회사는 직보고 체계로, 혼자 고민하지 마세요.(소통이 가장 중요합니다.)<br>2. 팀장에게 묻고 안되면 바로 대표에게 알려주세요.</span></h1><div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
+                <h1 class="display-4 mb-4">우리는 <strong>대화</strong>를 정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
                 <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
             </div>
         </div>
