--- a/organization.html
+++ b/organization.html
@@ -88,7 +88,7 @@
               <img src="Su-min_LEE.png" class="card-img-top" alt="빅데이터 활용 물류">
               <div class="card-body">
                 <h5 class="card-title">이수민(Chief Technology Officer)</h5>
-                <p class="card-text">前)<br>한국에너지기술연구소/연구원</br>연세대학교 환경공학과 석사과정</p>現)<br>KAIST<br>생명화학공학과 박사과정</br>한국과학기술연구원/2차전지개발 및 촉매 및 기술개발</p>
+                <p class="card-text">前)<br>한국에너지기술연구소/연구원</br>연세대학교 화학공학과 석사과정</p>現)<br>KAIST<br>생명화학공학과 박사과정</br>한국과학기술연구원/2차전지개발 및 촉매 및 기술개발</p>
               </div>
             </div>
           </div>
