--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="display-4 mb-4">HIMTOS</h1>
-                    <p class="lead">최고의 AI기술로 당신과 함께 합니다!</p>
+                    <p class="lead">당신과 함께 합니다!</p>
                 </div>
             </div>
         </div>
