--- a/industry.html
+++ b/industry.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
             <div class="card">
-                <img src="Himmel.png" class="card-img-top" alt="Himmel" width="20%" height="20%">
+                <img src="HIMMEL.png" class="card-img-top" alt="Himmel" width="20%" height="20%">
                 <p>
                     기분이 좋지 않을 때, 전환이 필요할 때
                     <br>새로운 즐거움이 필요할 때<br>기분을 달래줄 필요가 있을 때<br>
