--- a/organization.html
+++ b/organization.html
@@ -58,10 +58,8 @@
 </head>
 <body>
   <div class="bg-white pb-">
-    <div class="hero-section bg-white text-black py-5" width="50%" height="50%">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6">
+    <div class="container">
+        <div class="card">
                     <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
                 </div>
                 <span><h1>1. 우리회사는 직보고 체계로, 혼자 고민하지 마세요.(소통이 가장 중요합니다.)<br>2. 팀장에게 묻고 안되면 바로 대표에게 알려주세요.</span></h1><div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
