--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
-            <img src="마케팅_이미지.jpg" class="card-img-top" alt="마케팅 이미지">
-            <h5 class="card-title">빅데이터 기반 마케팅</h5>
-            <p class="card-text">고객에게 다가가는 첫걸음 빅데이터 기반의 분석으로 고객님의 이윤을 극대화 하겠습니다.</p>
+            <img src="HIMMEL.png" class="card-img-top" alt="마케팅 이미지">
+            <h5 class="card-title">뮤지션과의 Live PlatForm</h5>
+            <p class="card-text">공연의 즐거움을 나누며 뮤지션과 사업주의 성공으로 다가갑니다.</p>
             <a href="#" class="btn btn-primary">자세히 알아보기</a>
           </div>
         </div>
