--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="HIMMEL.png" class="card-img-top" alt="마케팅 이미지">
             <h5 class="card-title">뮤지션과의 Live PlatForm</h5>
             <p class="card-text">공연의 즐거움을 나누며 뮤지션과 사업주의 성공으로 다가갑니다.</p>
-            <a href="#" class="btn btn-primary">자세히 알아보기</a>
+            <a href="industry.html" class="btn btn-primary">자세히 알아보기</a>
           </div>
         </div>
       </div>
