--- a/company.html
+++ b/company.html
@@ -20,7 +20,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-    <title>HIMTOS</title>
+    <title>고객과 함께 하는 HIMTOS</title>
     <nav class="navbar">
       <div class="navbar_logo">
         <img src="Himtos_대문자.png" width="30%" height="30%">
