--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h3>사업문의</h5>
     <h3>☎ 010-5807-4702</h3>
     <h2>E-mail) kkjjll18@naver.com</h2>
-    <a href="#" class="btn btn-primary">문의하기</a></div>
+    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
   
   
   </div>
