--- a/index.html
+++ b/index.html
@@ -103,18 +103,19 @@
   
     </div>
   </div>
-  <div class="container">
-    <div class = "row"></div>
-    <div class="col-md-5">
-    <h3>사업문의</h5>
-    <h3>☎ 010-5807-4702</h3>
-    <h2>E-mail) kkjjll18@naver.com</h2>
-    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
   
   
   </div>
   </section>    
   </div>   
-  
+  <div class="bg-dark pb-5">
+    <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+      <div class="container">
+        <div class = "row"></div>
+        <div class="col-md-5">
+        <h3>사업문의</h5>
+        <h3>☎ 010-5807-4702</h3>
+        <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+        <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 </body>
 </html>
