--- a/industry.html
+++ b/industry.html
@@ -1,3 +1,4 @@
+indusry.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -84,6 +85,14 @@
         뮤지션과 사업주와의 연결 PlatForm!<br>
     <h1><strong>당신은 즐기기만 하면 된다!</h1></strong></p>
     <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">사업주문의</a>
-    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">뮤지션 문의</a>
-<br>사업문의 : 010-5807-4702/<strong>HIMTOS 대표 : 권혁승</strong></div>
+    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">뮤지션 문의</a></div>
+    <div class="bg-dark pb-5">
+        <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+          <div class="container">
+            <div class = "row"></div>
+            <div class="col-md-5">
+            <h3>사업문의</h5>
+            <h3>☎ 010-5807-4702</h3>
+            <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+            <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 </body>
