--- a/company.html
+++ b/company.html
@@ -78,7 +78,18 @@
             <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4></span>
             <img src="물류_image.png" alt="물류 이미지" class="img-fluid" width="30%" height="30%">0
             <h4>3. 가장 빠른 Route</h4>
-            <p>네비게이션 개발 및 탁송시간까지 알 수 있어 정확한 배송</p> 
+            <p>네비게이션 개발 및 탁송시간까지 알 수 있어 정확한 배송</p>
+        </div>
+    </div>
+            <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+              <div class="container">
+                <div class = "row"></div>
+                <div class="col-md-5">
+                <h3>사업문의</h5>
+                <h3>☎ 010-5807-4702</h3>
+                <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+                <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
+    </body> 
 </body>
 </html>
 
