--- a/organization.html
+++ b/organization.html
@@ -1,122 +1,131 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-              integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-              crossorigin="anonymous"></script>
-      <script src="https://kit.fontawesome.com/3f3c939ad7.js" crossorigin="anonymous"></script>
-      <link href="Himtos_practice_menu.css" rel="stylesheet">
-      <script src="Himtos_practice.js" defer></script>
-      <link rel="shortcut icon" href="/favicon.ico/android-icon-36x36.png" type="image/x-icon">
-      <link rel="icon" href="/favicon.ico/favicon.ico" type="image/x-icon">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-    <title>고객과 함께하는 HIMTOS</title>
-    <nav class="navbar">
-      <div class="navbar_logo">
-        <img src="Himtos_대문자.png" width="30%" height="30%">
-        <a href="http://www.himtos.com">HIMTOS</a>
-  
-      </div>
-      <ul class="navbar_menu">
-        <li><a href="company.html">Company</a></li>
-        <li><a href="">Organization</a></li>
-        <li><a href="industry.html">Industry</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
-  
-      </ul>
-      <ul class="navbar_icons">
-        <li><i class="fa-solid fa-comments-question"></i></li>
-        <li><i class="fa-sharp fa-solid fa-location-dot"></i></li>
-        <li><i class="fa-solid fa-tty-answer"></i></li>
-      </ul>
-      <a href="#" class="navbar_toogleBtn">
-        <i class="fa-sharp fa-solid fa-bars"></i>
-      </a>
-    </nav>
-    <div class="bg-dark pb-5">
-      <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
-          <div class="container">
-              <div class="row align-items-center">
-                  <div class="col-md-6">
-                      <img src="Himtos_대문자.png" alt="Himtos_logo" width="50%" height="50%">
-                  </div>
-                  <div class="col-md-6">
-                      <h1 class="display-4 mb-4">HIMTOS</h1>
-                      <p class="lead">HIMTOS 식구들을 소개합니다</p>
-                  </div>
-              </div>
-          </div>
-      </div>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3f3c939ad7.js" crossorigin="anonymous"></script>
+    <link href="Himtos_practice_menu.css" rel="stylesheet">
+    <script src="Himtos_practice.js" defer></script>
+    <link rel="shortcut icon" href="/favicon.ico/android-icon-36x36.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico/favicon.ico" type="image/x-icon">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+  <title>고객과 함께하는 HIMTOS</title>
+  <nav class="navbar">
+    <div class="navbar_logo">
+      <img src="Himtos_대문자.png" width="30%" height="30%">
+      <a href="http://www.himtos.com">HIMTOS</a>
+
     </div>
+    <ul class="navbar_menu">
+      <li><a href="company.html">Company</a></li>
+      <li><a href="">Organization</a></li>
+      <li><a href="industry.html">Industry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19">Career</a></li>
+
+    </ul>
+    <ul class="navbar_icons">
+      <li><i class="fa-solid fa-comments-question"></i></li>
+      <li><i class="fa-sharp fa-solid fa-location-dot"></i></li>
+      <li><i class="fa-solid fa-tty-answer"></i></li>
+    </ul>
+    <a href="#" class="navbar_toogleBtn">
+      <i class="fa-sharp fa-solid fa-bars"></i>
+    </a>
+  </nav>
+  <div class="bg-dark pb-5">
+    <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="Himtos_대문자.png" alt="Himtos_logo" width="50%" height="50%">
+                </div>
+                <div class="col-md-6">
+                    <h1 class="display-4 mb-4">HIMTOS</h1>
+                    <p class="lead">HIMTOS 식구들을 소개합니다</p>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
 </head>
 <body>
-  <div class="bg-white pb-">
-    <div class="container">
-        <div class="card">
-                    <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
-                </div>
-                <span><h1>1. 우리회사는 직보고 체계로, 혼자 고민하지 마세요.(소통이 가장 중요합니다.)<br>2. 팀장에게 묻고 안되면 바로 대표에게 알려주세요.</span></h1><div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
-                <h1 class="display-4 mb-4">우리는 <strong>대화</strong>를 정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
-                <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
-            </div>
-        </div>
-    </div>
-</div>
-    <div class ="background">
-        <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <img src="Hyeokseung_Gwon.jpg" class="card-img-top" alt="빅데이터 활용 인테리어">
-              <div class="card-body">
-                <h5 class="card-title">권혁승(Chief Executive Officer)</h5>
-                <p class="card-text">前)<br>O2pluss/인사담당자(채용담당)<br>TDI Group & TDI Play/인사담당자(조직문화, 복지)<br>DoALLPack/인사담당자(노무,채용,조직문화)<br><br>現)<br>(주)씨오엠<br>인사담당자(교육,계약,해지,노무,이슈,조직문화,성과지표,승진 등 모든 업무)</p>
+<div class="bg-white pb-">
+  <div class="container">
+      <div class="card">
+                  <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
               </div>
-            </div>
+              <span><h1>1. 우리회사는 직보고 체계로, 혼자 고민하지 마세요.(소통이 가장 중요합니다.)<br>2. 팀장에게 묻고 안되면 바로 대표에게 알려주세요.</span></h1><div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
+              <h1 class="display-4 mb-4">우리는 <strong>대화</strong>를 정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
+              <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
           </div>
-          <div class="col-md-4">
-            <div class="card">
-              <img src="Su-min_LEE.png" class="card-img-top" alt="빅데이터 활용 물류">
-              <div class="card-body">
-                <h5 class="card-title">이수민(Chief Technology Officer)</h5>
-                <p class="card-text">前)<br>한국에너지기술연구소/연구원</br>연세대학교 화학공학과 석사과정</p>現)<br>KAIST<br>생명화학공학과 박사과정</br>한국과학기술연구원/2차전지개발 및 촉매 및 기술개발</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body">
-                <img src="Ki_Sung_Yoo.png" class="card-img-top" alt="마케팅 이미지">
-                <h5 class="card-title">유기성(Tech & Developement)</h5>
-                <p class="card-text">前)<br>Est-Soft/Back-end개발<br>Rimo AI/Front-end개발<br>現)<br>개발자</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body">
-                <img src="Yong_Jun_LEE.png" class="card-img-top" alt="마케팅 이미지">
-                <h5 class="card-title">이용준(Financial Part)</h5>
-                <p class="card-text">前)세무법인 실무 <br>現)HIMTOS 세무실무자</p>
-              </div>
-            </div>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
-            <h5 class="card-title">박승현</h5>
-            <p class="card-text">前)Egg&Seed B2B&B2C 영업&기획관리부<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
+  </div>
+</div>
+  <div class ="background">
+      <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="Hyeokseung_Gwon.jpg" class="card-img-top" alt="빅데이터 활용 인테리어">
+            <div class="card-body">
+              <h5 class="card-title">권혁승(Chief Executive Officer)</h5>
+              <p class="card-text">前)<br>O2pluss/인사담당자(채용담당)<br>TDI Group & TDI Play/인사담당자(조직문화, 복지)<br>DoALLPack/인사담당자(노무,채용,조직문화)<br><br>現)<br>(주)씨오엠<br>인사담당자(교육,계약,해지,노무,이슈,조직문화,성과지표,승진 등 모든 업무)</p>
+            </div>
           </div>
         </div>
-  </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="Su-min_LEE.png" class="card-img-top" alt="빅데이터 활용 물류">
+            <div class="card-body">
+              <h5 class="card-title">이수민(Chief Technology Officer)</h5>
+              <p class="card-text">前)<br>한국에너지기술연구소/연구원</br>연세대학교 화학공학과 석사과정</p>現)<br>KAIST<br>생명화학공학과 박사과정</br>한국과학기술연구원/2차전지개발 및 촉매 및 기술개발</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <img src="Ki_Sung_Yoo.png" class="card-img-top" alt="마케팅 이미지">
+              <h5 class="card-title">유기성(Tech & Developement)</h5>
+              <p class="card-text">前)<br>Est-Soft/Back-end개발<br>Rimo AI/Front-end개발<br>現)<br>개발자</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <img src="Yong_Jun_LEE.png" class="card-img-top" alt="마케팅 이미지">
+              <h5 class="card-title">이용준(Financial Part)</h5>
+              <p class="card-text">前)세무법인 실무 <br>現)HIMTOS 세무실무자</p>
+            </div>
+          </div>
     </div>
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
+          <h5 class="card-title">박승현</h5>
+          <p class="card-text">前)Egg&Seed B2B&B2C 영업&기획관리부<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
+        </div>
+      </div>
+      
+</div>
+  </div></div>
+  <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+    <div class="container">
+      <div class = "row"></div>
+      <div class="col-md-5">
+      <h3>사업문의</h5>
+      <h3>☎ 010-5807-4702</h3>
+      <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+      <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 
 </body>
