--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <div class="col-md-5">
             <h3>사업문의</h5>
             <h3>☎ 010-5807-4702</h3>
-            <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+            <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyright/Himtos</span>
             <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 </body>
 </html>
