--- a/organization.html
+++ b/organization.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="display-4 mb-4">HIMTOS</h1>
-                    <p class="lead">HIMTOS 식구들을 소개합니다</p>
+                    <p class="lead">HIMTOS에 대해 소개합니다.</p>
                 </div>
             </div>
         </div>
@@ -57,75 +57,30 @@
   </div>
 </head>
 <body>
-<div class="bg-white pb-">
   <div class="container">
-      <div class="card">
-                  <img src="조직도_0.1v.jpg" alt="Himtos_logo" width="100%" height="100%">
-              </div>
-              <span><h1>1. 우리회사는 직보고 체계로, 혼자 고민하지 마세요.(소통이 가장 중요합니다.)<br>2. 팀장에게 묻고 안되면 바로 대표에게 알려주세요.</span></h1><div class="hero-section bg-dark text-white py-5 width="50%" height="50%">
-              <h1 class="display-4 mb-4">우리는 <strong>대화</strong>를 정말 중요시 해요, 작은 것 조차 나누며 헤쳐나가고 있습니다.</h1>
-              <a href="https://cold-abrosaurus-e08.notion.site/Who-We-Are-833786ddc2c14e39aa960e82bafbec19" class="btn btn-primary">자세히 알아보기</a>
-          </div>
-      </div>
-  </div>
-</div>
-  <div class ="background">
-      <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card">
-            <img src="Hyeokseung_Gwon.jpg" class="card-img-top" alt="빅데이터 활용 인테리어">
-            <div class="card-body">
-              <h5 class="card-title">권혁승(Chief Executive Officer)</h5>
-              <p class="card-text">前)<br>O2pluss/인사담당자(채용담당)<br>TDI Group & TDI Play/인사담당자(조직문화, 복지)<br>DoALLPack/인사담당자(노무,채용,조직문화)<br><br>現)<br>(주)씨오엠<br>인사담당자(교육,계약,해지,노무,이슈,조직문화,성과지표,승진 등 모든 업무)</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img src="Su-min_LEE.png" class="card-img-top" alt="빅데이터 활용 물류">
-            <div class="card-body">
-              <h5 class="card-title">이수민(Chief Technology Officer)</h5>
-              <p class="card-text">前)<br>한국에너지기술연구소/연구원</br>연세대학교 화학공학과 석사과정</p>現)<br>KAIST<br>생명화학공학과 박사과정</br>한국과학기술연구원/2차전지개발 및 촉매 및 기술개발</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <img src="Ki_Sung_Yoo.png" class="card-img-top" alt="마케팅 이미지">
-              <h5 class="card-title">유기성(Tech & Developement)</h5>
-              <p class="card-text">前)<br>Est-Soft/Back-end개발<br>Rimo AI/Front-end개발<br>現)<br>개발자</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <img src="Yong_Jun_LEE.png" class="card-img-top" alt="마케팅 이미지">
-              <h5 class="card-title">이용준(Financial Part)</h5>
-              <p class="card-text">前)세무법인 실무 <br>現)HIMTOS 세무실무자</p>
-            </div>
-          </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
-        <div class="card-body">
-          <img src="Seung_Hyun_Park.png" class="card-img-top" alt="마케팅 이미지">
-          <h5 class="card-title">박승현</h5>
-          <p class="card-text">前)Egg&Seed B2B&B2C 영업&기획관리부<br>DoAllPack 물류 및 배송관리<br>現)HIMTOS Sales Pt. Manager</p>
-        </div>
-      </div>
-      
-</div>
-  </div></div>
+  <h2>서로에게 서로 힘을 줄 수 있는 미래를 만들어 갑니다.</h2>
+    <div style="width:50%; height:50%; float:left;">
+      <img src="creative_pic.jpg" alt="growth" width="50%" height="50%">
+      <h1><strong>Mission</h1></strong><h1>Dream Convenient World!</h1>
+      <p>우리는 불편함에 익숙하지 않습니다.<br>불편하다는 것은 새롭게 바뀌어야 한다는 것을 의미한다고 생각합니다.<br>더욱 많이 듣고 발전해 나가는 것이 우리가 해야할 숙제입니다.</p></div>
+  <img src="growth.png" alt="growth" width="25%" height="25%"><h1><strong>Vision</h1></strong><h1>Find the New Worth!</h1></div>
+  <p>우리는 성장을 해야합니다.<br>새로운 도전을 하고 가치를 찾고, 함께 발전해가는 주변으로 채워야 나 뿐만 아닌 전체의 성장으로 나아갈 수 있다고 생각합니다.</p></div></div>
+  <div class="container">
+    <h2>서로에게 서로 힘을 줄 수 있는 미래를 만들어 갑니다.</h2>
+      <div style="width:50%; height:50%; float:auto;">
+        <img src="조직도_0.1v.jpg" alt="조직도" width="100%" height="100%"></div>
+        <h1><strong>Culture</h1></strong><br><strong><h1>의사소통</strong></h1>
+       <p><h1>우리는 소통을 정말 중요하게 생각합니다. 상사에게 알려서 안되면, 대표에게 바로 알려주세요. 회사에서 소통은 발전을 할 수 있는 동력입니다.</h1></p><br>
+      <h1><strong>편하게 쉬자</strong><br>
+      대표에게 직접 말하자, 직원의 편의를 생각해야하는 것은 대표의 몫이다. 직접 말하자.</h1></div></div>
+       <div style="width: auto;height: auto;">
   <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
     <div class="container">
       <div class = "row"></div>
       <div class="col-md-5">
       <h3>사업문의</h5>
       <h3>☎ 010-5807-4702</h3>
-      <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyright/Himtos</span>
-      <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
+      <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
+      <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div></div></div>
 
 </body>
