--- a/organization.html
+++ b/organization.html
@@ -57,24 +57,55 @@
   </div>
 </head>
 <body>
+  <div class="hero-section bg-white text-black py-5" width="50%" height="50%"></div>
   <div class="container">
-  <h2>서로에게 서로 힘을 줄 수 있는 미래를 만들어 갑니다.</h2>
-    <div style="width:50%; height:50%; float:left;">
-      <img src="creative_pic.jpg" alt="growth" width="50%" height="50%">
-      <h1><strong>Mission</h1></strong><h1>Dream Convenient World!</h1>
-      <p>우리는 불편함에 익숙하지 않습니다.<br>불편하다는 것은 새롭게 바뀌어야 한다는 것을 의미한다고 생각합니다.<br>더욱 많이 듣고 발전해 나가는 것이 우리가 해야할 숙제입니다.</p></div>
-  <img src="growth.png" alt="growth" width="25%" height="25%"><h1><strong>Vision</h1></strong><h1>Find the New Worth!</h1></div>
-  <p>우리는 성장을 해야합니다.<br>새로운 도전을 하고 가치를 찾고, 함께 발전해가는 주변으로 채워야 나 뿐만 아닌 전체의 성장으로 나아갈 수 있다고 생각합니다.</p></div></div>
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <img src="creative_pic.jpg" alt="creative_pic" width="50%" height="50%">
+      </div>
+      <div class="col-md-6">
+        <h1><strong>Mission</strong></h1>
+        <h1>Dream Convenient World!</h1>
+        <p>우리는 불편함에 익숙하지 않습니다.<br>불편하다는 것은 새롭게 바뀌어야 한다는 것을 의미한다고 생각합니다.<br>더욱 많이 듣고 발전해 나가는 것이 우리가 해야할 숙제입니다.</p>
+      </div>
+    </div>
+  </div>
   <div class="container">
-    <h2>서로에게 서로 힘을 줄 수 있는 미래를 만들어 갑니다.</h2>
-      <div style="width:50%; height:50%; float:auto;">
-        <img src="조직도_0.1v.jpg" alt="조직도" width="100%" height="100%"></div>
-        <h1><strong>Culture</h1></strong><br><strong><h1>의사소통</strong></h1>
-       <p><h1>우리는 소통을 정말 중요하게 생각합니다. 상사에게 알려서 안되면, 대표에게 바로 알려주세요. 회사에서 소통은 발전을 할 수 있는 동력입니다.</h1></p><br>
-      <h1><strong>편하게 쉬자</strong><br>
-      대표에게 직접 말하자, 직원의 편의를 생각해야하는 것은 대표의 몫이다. 직접 말하자.</h1></div></div>
-       <div style="width: auto;height: auto;">
-  <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <img src="growth.png" alt="growth" width="50%" height="50%">
+      </div>
+      <div class="col-md-6">
+        <h1><strong>Vision</strong></h1>
+        <h1>Find the New Worth!</h1>
+        <p>우리는 성장을 해야합니다.<br>새로운 도전을 하고 가치를 찾고, 함께 발전해가는 주변으로 채워야 나 뿐만 아닌 전체의 성장으로 나아갈 수 있다고 생각합니다.</br></p>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <img src="조직도_0.1v.jpg" alt="조직도" width="50%" height="50%">
+      </div>
+      <div class="col-md-6">
+        <h1><strong>조직도</strong></h1>
+        <H2>우리회사는 직보고 System 입니다. 바로 윗 상사에게 요청한 내용이 전달이 안되면, 바로 알려주세요<br></H2>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <img src="culture.png" alt="culture" width="50%" height="50%">
+      </div>
+      <div class="col-md-6">
+        <h2><strong>Culture(문화)</strong></h2>
+        <p><h3>우리는 소통을 정말 중요하게 생각합니다. 상사에게 알려서 안되면, 대표에게 바로 알려주세요. 회사에서 소통은 발전을 할 수 있는 동력입니다.</h3></p><br>
+      <h3><strong>편하게 쉬자</strong><br>
+      대표에게 직접 말하자, 직원의 편의를 생각해야하는 것은 대표의 몫이다. 직접 말하자.</h3>
+    </div>
+  </div></div>
+  <div class="hero-section bg-dark text-white py-5" width="100%" height="100%">
     <div class="container">
       <div class = "row"></div>
       <div class="col-md-5">
