--- a/organization.html
+++ b/organization.html
@@ -100,8 +100,8 @@
       </div>
       <div class="col-md-6">
         <h2><strong>Culture(문화)</strong></h2>
-        <p><h3>우리는 소통을 정말 중요하게 생각합니다. 상사에게 알려서 안되면, 대표에게 바로 알려주세요. 회사에서 소통은 발전을 할 수 있는 동력입니다.</h3></p><br>
-      <h3><strong>편하게 쉬자</strong><br>
+        <p><h3>1.우리는 소통을 정말 중요하게 생각합니다. 상사에게 알려서 안되면, 대표에게 바로 알려주세요. 회사에서 소통은 발전을 할 수 있는 동력입니다.</h3></p><br>
+      <h3><strong>2.편하게 쉬자</strong><br>
       대표에게 직접 말하자, 직원의 편의를 생각해야하는 것은 대표의 몫이다. 직접 말하자.</h3>
     </div>
   </div></div>
@@ -109,7 +109,7 @@
     <div class="container">
       <div class = "row"></div>
       <div class="col-md-5">
-      <h3>사업문의</h5>
+      <h3>사업문의</h3>
       <h3>☎ 010-5807-4702</h3>
       <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
       <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div></div></div>
