--- a/company.html
+++ b/company.html
@@ -57,28 +57,39 @@
                   <div class="lead"></div><h3>Himtos는 당신과 함께 하겠습니다.</h3></div>
               </div></div></div></div></div>
     <br><br><br>
+    <div class="hero-section bg-white text-black py-5" width="50%" height="50%"></div>
     <div class="container">
-        <div class="company-info">
-            <h3>HIMTOS</h3>
-            <p>HIMTOS는 당신과 함께 하는 Business Partner가 되겠습니다.</p>
-            <h3>Misson</h3>
-            <p>편리한 세상을 꿈꾸자</p>
-            <h3>Vision</h3>
-            <p>삶의 질을 향상시키도록 우리는 앞장선다.</p>
-            <h3>Goal</h3>
-            <p>새로운 가치를 찾아낸다.</p>
-            
-            <h3>사업영역</h3>
-            <img src="인테리어 이미지.jpg" alt="인테리어_이미지" class="img-fluid" width="30%" height="30%">
-            <h4>1. 빅데이터 활용 인테리어</h4>
-            <p>고객에 맞춘 인테리어 소재 개발 및 배치, 편리성과 공간활용도 분석</p>
-            <img src="마케팅_이미지.jpg" alt="마케팅 이미지" class="img-fluid" width="30%" height="30%">
-            <h4>2. 인플루언서 고용플랫폼 Nuga Winner & Live Stage 공연 Platform HIMMEL</h4>
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <img src="creative_pic.jpg" alt="creative_pic" width="50%" height="50%">
+        </div>
+        <div class="col-md-6">
+          <h1><strong>Mission</strong></h1>
+          <h1>Dream Convenient World!</h1>
+          <p>우리는 불편함에 익숙하지 않습니다.<br>불편하다는 것은 새롭게 바뀌어야 한다는 것을 의미한다고 생각합니다.<br>더욱 많이 듣고 발전해 나가는 것이 우리가 해야할 숙제입니다.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <img src="growth.png" alt="growth" width="50%" height="50%">
+        </div>
+        <div class="col-md-6">
+          <h1><strong>Vision</strong></h1>
+          <h1>Find the New Worth!</h1>
+          <p>우리는 성장을 해야합니다.<br>새로운 도전을 하고 가치를 찾고, 함께 발전해가는 주변으로 채워야 나 뿐만 아닌 전체의 성장으로 나아갈 수 있다고 생각합니다.</br></p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+            <h1>사업영역</h1>
+            <div class="col-md-6">
+              <img src="마케팅_이미지.jpg" alt="마케팅 이미지" class="img-fluid" width="50%" height="50%">
+              <p><h4>1. 인플루언서 고용플랫폼 Nuga Winner & Live Stage 공연 Platform HIMMEL</h4>
             <h2>Nuga Winner 고객에 맞춘 BTL전용 인플루언서 고용플랫폼/트렌드분석 및 전략컨설팅</h2>
-            <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4></span>
-            <img src="물류_image.png" alt="물류 이미지" class="img-fluid" width="30%" height="30%">0
-            <h4>3. 가장 빠른 Route</h4>
-            <p>네비게이션 개발 및 탁송시간까지 알 수 있어 정확한 배송</p>
+            <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4>
+            </div></p>
         </div>
     </div>
             <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
@@ -87,7 +98,7 @@
                 <div class="col-md-5">
                 <h3>사업문의</h5>
                 <h3>☎ 010-5807-4702</h3>
-                <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyright/Himtos</span>
+                <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyrigt/Himtos</span>
                 <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
     </body> 
 </body>
