--- a/company.html
+++ b/company.html
@@ -85,11 +85,9 @@
     <div class="container">
             <h1>사업영역</h1>
             <div class="col-md-6">
-              <img src="마케팅_이미지.jpg" alt="마케팅 이미지" class="img-fluid" width="50%" height="50%">
-              <p><h4>1. 인플루언서 고용플랫폼 Nuga Winner & Live Stage 공연 Platform HIMMEL</h4>
-            <h2>Nuga Winner 고객에 맞춘 BTL전용 인플루언서 고용플랫폼/트렌드분석 및 전략컨설팅</h2>
+            <h2><strong>Live 플랫폼 HIMMEL(우리 서로 힘을~)</h2></strong>
             <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4>
-            </div></p>
+            </p><a href="indusry.html" class="btn btn-primary" class="btn btn-primary">자세히 알아보기</a></div></div>
         </div>
     </div>
             <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
