--- a/company.html
+++ b/company.html
@@ -87,7 +87,7 @@
             <div class="col-md-6">
             <h2><strong>Live 플랫폼 HIMMEL(우리 서로 힘을~)</h2></strong>
             <h4><img src=HIMMEL.png alt="HIMMEL" class="img-fluid" width="30%" height="30%"><br><strong>HIMMEL</strong> - 공연장소와 공연자의 상호작용 플랫폼</h4>
-            </p><a href="indusry.html" class="btn btn-primary" class="btn btn-primary">자세히 알아보기</a></div></div>
+            </p><a href="industry.html" class="btn btn-primary" class="btn btn-primary">자세히 알아보기</a></div></div>
         </div>
     </div>
             <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
