--- a/industry.html
+++ b/industry.html
@@ -1,3 +1,4 @@
+indusry.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,22 +70,21 @@
 </div>
 <body>
     <div class="container">
-            <div class="card">
-                <img src="HIMMEL.png" class="card-img-top" alt="Himmel" width="20%" height="20%">
-                <p>
+                <img style="border : 24px solid white; border-radius:24px'-moz-border-radius:24px; -khtml-border-radius: 7px;-webkit-border-radius : 7px;" src="HIMMEL.png" class="card-img-top" alt="Himmel" width="50%" height="50%">
+                <h2><p>
                     기분이 좋지 않을 때, 전환이 필요할 때
-                    <br>새로운 즐거움이 필요할 때<br>기분을 달래줄 필요가 있을 때<br>
-                <strong><h2>내 주변 Live Cafe 나 공연장소를 가보자</h2></strong>
-                새로운 즐거움은 내 주변에!<br><br>
+                    <br>새로운 즐거움이 필요할 때<br>기분을 달래줄 필요가 있을 때</h2><br>
+                <strong><h1>내 주변 Live Cafe 나 공연장소를 가보자</h1></strong>
+                <h2>새로운 즐거움은 내 주변에!<br><br>
                 내가 듣고 싶은 가수가, 혹은 밴드가 내 주변에서 공연을 하는지 궁금하면?<br>어서 들어와!<br>
                 주변 먹을 것과 카페에서는 어떤게 잘 나가는지!<br>
-                맛집탐험과 즐거움 동시에!
-            </p></div>
-        <p><H1><strong>공연으로 스트레스를 날려보자!</H1></strong><br>
-        뮤지션과 사업주와의 연결 PlatForm!<br>
+                맛집탐험과 즐거움 동시에!</h2>
+            </p>
+        <p><H1><strong>공연으로 스트레스를 날려보자!</strong><br>
+        뮤지션과 사업주와의 연결 PlatForm!<br></H1>
     <h1><strong>당신은 즐기기만 하면 된다!</h1></strong></p>
     <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">사업주문의</a>
-    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">뮤지션 문의</a></div>
+    <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary">뮤지션 문의</a></div></body</div>
     <div class="bg-dark pb-5">
         <div class="hero-section bg-dark text-white py-5" width="50%" height="50%">
           <div class="container">
@@ -95,3 +95,4 @@
             <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyright/Himtos</span>
             <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 </body>
+</div>
