--- a/industry.html
+++ b/industry.html
@@ -74,7 +74,7 @@ indusry.html
                 <h2><p>
                     기분이 좋지 않을 때, 전환이 필요할 때
                     <br>새로운 즐거움이 필요할 때<br>기분을 달래줄 필요가 있을 때</h2><br>
-                <strong><h1>내 주변 Live Cafe 나 공연장소를 가보자</h1></strong>
+                    <h1><strong>내 주변 Live Cafe 나 공연장소를 가보자</h1></strong>
                 <h2>새로운 즐거움은 내 주변에!<br><br>
                 내가 듣고 싶은 가수가, 혹은 밴드가 내 주변에서 공연을 하는지 궁금하면?<br>어서 들어와!<br>
                 주변 먹을 것과 카페에서는 어떤게 잘 나가는지!<br>
@@ -95,4 +95,4 @@ indusry.html
             <h2>E-mail) kkjjll18@naver.com</h2><span>ⓒcopyright/Himtos</span>
             <a href="http://pf.kakao.com/_uFxnQxj/chat" class="btn btn-primary" class="btn btn-primary">문의하기</a></div>
 </body>
-</div>
+</div></div><aside class="section"></aside>
